2005-03-23  Inge Wallin  <inge@lysator.liu.se>

	Start with some simple support for templates.
	* templates: new directory
	* templates/Makefile.am: new file
	* templates/BarChart.chrt: new file, example chart template.
	
	----------------------------------------------------------------

	Bug fix.
	* kchartDataEditor.cc (setCols): Set width for all new columns.
	(misc): Code cleaning
	
	Code cleaning
	* kchartDataEditor.{h,cc}: Move some methods, change What's This
	strings, and add some comments.

	Documentation.
	* kchartDataEditor.{h,cc}: Document the reasons for the nice fix
	of Fredrik below.

2005-03-23  Fredrik Edemar <f_edemar@linux.se>

	Fix a problem with the spinboxes in the data editor:
	* kchartDataEditor.{h,cc} (kchartDataSpinBox): new class that
	inherits QSpinBox.
	(m_rowsSB, m_colsSB): Use kchartDataSpinBox instead of QSpinBox.

2005-03-18  Inge Wallin  <inge@lysator.liu.se>

	Improve layout for 3D bar chart parameters.
	* kchartParameter3dConfigPage.cc (KChartParameter3dConfigPage):
	Improve layout.

2005-03-17  Inge Wallin  <inge@lysator.liu.se>

	Remove the 3D Line Parameters page from the config dialog due to
	general uselessness and uglyness.
	* kchartConfigDialog.cc (KChartConfigDialog): Disabled 3D Line
	page.
	* kchartLine3dConfigPage.cc (constructor): Changed layout
	somewhat, during the experiments.
	
	----------------------------------------------------------------

	Fix the uglyness of the font config dialog.
	* kchartFontConfigPage.cc (KChartFontConfigPage): Add some stretch
	in suitable places.

	----------------------------------------------------------------

	Separate the toolbar for chart types from the actions.
	* kchart.rc (Actions): Renamed from Chart
	(Types): New toolbar.
	
2005-03-15  Fredrik Edemar <f_edemar@linux.se>

	Changes in the data editor:
	* Show the column names in the header column and the row names in
	the header row. Click on a header column/row to rename it.